Revision history for JSON-Fast

{{$NEXT}}

0.9.18  2019-07-02T03:05:24+02:00
    - More significant improvement of to-json speed

0.9.17  2019-07-02T02:47:36+02:00
    - Slight improvement of to-json speed

0.9.16  2019-07-01T19:18:14+02:00
    - :!pretty now promises only a single line of output.

0.9.15  2019-07-01T00:34:29+02:00
    - Enums jsonify as a string of their short name again.

0.9.14  2019-06-27T01:51:50+02:00
    - Nonpretty output doesn't need a space between keys and values
    - Unexpected extra data after parse now gives a structured exception
      including the parsed data so far, and the position parsing ended,
      so that multiple documents in a file can be parsed just fine.

0.9.13  2019-06-07T20:54:16+02:00
    - Fix pretty output for empty arrays/hashes
    - Include lizmat's much faster to-json implementation